OVER TO THE NEW FILE NAMES (AND WILL BACKUP YOUR PREVIOUS BUNDLED PLUGIN CONFIGS).


v4.27.0 and higher of this app RESETS ALL PLUGIN CACHES (A DIRECTORY STRUCTURE UPGRADE), 
SO ANY PLUGIN ALERTS / TRACKING WILL BE RESET. THE !FIRST! PLUGIN RUNTIMES AFTER UPGRADING
WILL AUTOMATICALLY PREFORM THE RESET (ALERTS / TRACKING WILL BE ACCURATE AFTERWARDS).


-------------------------------------------------------------------



-------------------------------------------------------------------
5.01.0:


-Compare any marketcap against other marketcaps (in percentage of)


-Misc UX revisions


-Updated default config


v5.00.0 and higher of this app HAS COMPLETELY REFACTORED CONFIGURATION VARIABLE NAMES,
SO YOU'LL NEED TO MIGRATE ANY CUSTOM CONFIGS OVER TO THE PROPER NAMES WHERE APPLICABLE!


v5.00.0 and higher of this app RESETS ALL ALERTS CACHES (A DIRECTORY STRUCTURE UPGRADE), 
SO ANY ALERTS WILL BE RESET (INCLUDING PLUGINS). THE !FIRST! RUNTIMES AFTER UPGRADING
WILL AUTOMATICALLY PREFORM THE RESET (ALERTS WILL BE ACCURATE AFTERWARDS).


v4.29.3 and higher of this app HAS COMPLETELY REFACTORED CONFIGURATION VARIABLE NAMES,
SO YOU'LL NEED TO MIGRATE ANY CUSTOM CONFIGS OVER TO THE PROPER NAMES WHERE APPLICABLE!


v4.29.3 and higher of this app HAS COMPLETELY RESTRUCTERED THE PLUGIN FILE NAMES! PLEASE
MIGRATE ANY CUSTOM PLUGIN CONFIGS / FILES INTO THE NEW NAMES: 'plug-conf.php', 'plug-init.php',
'plug-class.php'. THE AUTO-INSTALL SCRIPT WILL #AUTOMATICALLY MIGRATE# BUNDLED PLUGIN FILES 
OVER TO THE NEW FILE NAMES (AND WILL BACKUP YOUR PREVIOUS BUNDLED PLUGIN CONFIGS).


v4.27.0 and higher of this app RESETS ALL PLUGIN CACHES (A DIRECTORY STRUCTURE UPGRADE), 
SO ANY PLUGIN ALERTS / TRACKING WILL BE RESET. THE !FIRST! PLUGIN RUNTIMES AFTER UPGRADING
WILL AUTOMATICALLY PREFORM THE RESET (ALERTS / TRACKING WILL BE ACCURATE AFTERWARDS).


-------------------------------------------------------------------







